# SystemPromptEval

./: .env.example  .gitignore  LEARNINGS.md  README.md  pyproject.toml
eval/: cases.yaml  run_eval.py  sample_hotpot_shape.jsonl
scripts/: ask.py
src/system_prompt_eval/: __init__.py  agent.py  config.py  eval_cases.py  eval_summary.py  judge.py  prompts.py  scoring.py  tools.py  wikipedia.py
tests/: test_eval_cases.py  test_eval_summary.py  test_judge.py  test_scoring.py  test_wikipedia.py
