[project]
name = "system-prompt-eval"
version = "0.1.0"
description = "Wikipedia-grounded LLM agent + eval suite (take-home)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["network: needs outbound HTTP to Wikipedia"]
addopts = "-m 'not network'"

[tool.ruff]
line-length = 100
src = ["src", "eval", "tests"]
